test/oscar/compiler/errors/noMainFunc.oscar
message testNow()
message testLater()

actor Tester() {
  
  receive = {
    | testLater() => {
        Println("Error1");
	}
  }
}
